--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,17 @@
 	"build": {
 		"dockerfile": "Dockerfile"
 	},
+	"workspaceFolder": "/go/src/github.com/containerd/containerd",
+	"workspaceMount": "source=${localWorkspaceFolder},target=/go/src/github.com/containerd/containerd,type=bind,consistency=cached",
+	"features": {
+		"ghcr.io/devcontainers/features/docker-in-docker:2": {},
+		"ghcr.io/devcontainers/features/go:1": {
+			"version": "1.20.2"
+		}
+	},
 	"overrideCommand": false,
-	"privileged": true
+	"privileged": true,
+	"runArgs": [
+		"--ipc=host"
+	]
 }
