--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,15 +1,7 @@
 {
-	"name": "Ubuntu w/systemd",
+	"name": "Creates devices with dmsetup and automatically maps to /dev/mapper",
 	"build": {
 		"dockerfile": "Dockerfile"
-	},
-	"workspaceFolder": "/go/src/github.com/containerd/containerd",
-	"workspaceMount": "source=${localWorkspaceFolder},target=/go/src/github.com/containerd/containerd,type=bind,consistency=cached",
-	"features": {
-		"ghcr.io/devcontainers/features/docker-in-docker:2": {},
-		"ghcr.io/devcontainers/features/go:1": {
-			"version": "1.20.2"
-		}
 	},
 	"overrideCommand": false,
 	"privileged": true,
